src/App.css
/* 解決滾動條造成的排版問題 */
html {
  overflow-y: scroll;
}

:root {
  overflow-y: visible;
  overflow-x: hidden;
}

:root body {
  position: absolute;
}

body {
  width: 100vw;
  /* overflow: hidden; */
}

/* Global Style */

html {
  font-size: 10px;
  background: #ffffff;
  /* 這樣設定的話，我排版用 rem（html 的 font-size 的值的幾倍） 比較方便 */
}

body {
  font-family: 'Resource Han Rounded TW', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  line-height: 1.5;
  width: 100vw;
}

/* Text */

.h1 {
  font-size: 2.2rem;
  font-weight: 700;
  line-height: 1.5;
  letter-spacing: 0.2em;
}

.h2 {
  font-size: 1.7rem;
  font-weight: 500;
  line-height: 1.4;
  letter-spacing: 0.1em;
}

.h3 {
  font-size: 1.2rem;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: 0.08em;
}

/* md */
@media (min-width: 768px) {
  .h1 {
    font-size: 2.5rem;
    font-weight: 700;
    line-height: 1.5;
    letter-spacing: 0.15em;
  }

  .h2 {
    font-size: 1.8rem;
    font-weight: 500;
    line-height: 1.5;
    letter-spacing: 0.1em;
  }

  .h3 {
    font-size: 1.4rem;
    font-weight: 400;
    line-height: 1.4;
    letter-spacing: 0.08em;
  }
}

/* RWD Container */

.container {
  width: 100vw;
  display: flex;
  align-self: center;
  /* margin: auto; */
  padding: 50px 20px;
  flex-direction: column;
  align-items: center;
}

/* sm */
@media (min-width: 576px) {
  .container {
    /* width: 540px; */
  }
}

/* md */
@media (min-width: 768px) {
  .container {
    /* width: 720px; */
    padding: 50px;
  }
}

/* lg */
@media (min-width: 992px) {
  .container {
    /* width: 960px; */
  }
}

/* xl */
@media (min-width: 1200px) {
  .container {
    /* width: 1140px; */
  }
}

/* xxl */
@media (min-width: 1400px) {
  .container {
    /* width: 1320px; */
  }
}

/* Grid Layout */

.pagecontainer {
  width: 100%;
  display: flex;
  align-self: center;
  margin: auto;
}

.mainLayout {
  display: grid;
  min-height: 100vh;
  grid-template-areas:
    'header'
    'content'
    'footer'
  ;
  grid-template-rows: auto 1fr auto;
}

.layoutHeader {
  grid-area: header;
  height: auto;

  position: sticky;
  top: 0;
  z-index: 1;
  width: 100vw;
  background: linear-gradient(90deg, #FFA1B8 0%, #0495FF 100%);
}

.layoutContent {
  grid-area: content;
  width: 100vw;
}

.layoutFooter {
  grid-area: footer;
  background: #F7F9FC;
  width: 100vw;
  padding: 50px 6vw 10px 6vw !important;
}

/* other */

button {
  display: flex;
  justify-content: center;
  align-items: center;
}

.btn {
  display: flex;
  align-items: center;
  justify-content: center;
}

.gradientBtn {
  width: fit-content;
  height: fit-content;
  padding: 10px 30px;
  margin: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 100px;
  color: #ffffff;
  background: linear-gradient(90deg, #FFA1B8 0%, #0495FF 100%);
}

.gradientBtn:hover {
  color: #ffffff;
  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
  transition: .175s;
}


/* 漸層字的按鈕，請為他上一個有 borderbox */

.gradientLineBtnBG {
  background: #ffffff;
}

.gradientLineBtn {
  width: fit-content;
  height: fit-content;
  padding: 10px 30px;
  background: linear-gradient(90deg, #FFA1B8 0%, #0495FF 100%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.borderBox {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: -1;
  height: fit-content;
  width: fit-content;
  /* width: 100%; */
  margin: 0 auto;
  background: linear-gradient(90deg, #FFA1B8 0%, #0495FF 100%);
}

.borderBox2 {
  padding: 2px;
  border-radius: 27.5px;
}

.borderBox3 {
  padding: 3px;
  border-radius: 27.5px;
}

.borderBox:hover {
  box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
  transition: .175s;
}

/* Antd */

.ant-menu-item-selected {
  font-weight: 700;
}



.ant-tabs-ink-bar {
  background: linear-gradient(90deg, #FFA1B8 0%, #0495FF 100%) !important;
}

.ant-tabs-tab-btn {
  color: #777777 !important;
}

.ant-tabs-tab-btn:hover {
  color: #000000 !important;
}

.ant-tabs-tab-active .ant-tabs-tab-btn {
  color: #000000 !important;
}

/* ^ 用 ConfigProvider 改的話會有點尷尬，所以只好在這改
      但其實我覺得用粉色也可以的說 */

